# compiler

./: .gitignore  elm-compiler.cabal  elm.cabal  elm.cabal.orig
src/: Compile.hs  Optimize.hs
src/AST/: Effects.hs  Literal.hs  Pattern.hs  Type.hs  Variable.hs
src/AST/Expression/: Canonical.hs  General.hs  Optimized.hs
src/AST/Module/: Name.hs
src/Canonicalize/: Sort.hs
src/Elm/: Compiler.hs
src/Elm/Compiler/: Version.hs
src/Generate/: JavaScript.hs
src/Optimize/: Case.hs  DecisionTree.hs  Inline.hs
src/Reporting/: Annotation.hs  Result.hs
