
Name: elm
Version: 0.18.3

Synopsis:
    The `elm` command line interface.

Description:
    This includes commands like `elm make`, `elm repl`, and many others
    for helping make Elm developers happy and productive.

Homepage: https://elm-lang.org

License: BSD3
License-file: LICENSE

Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright (c) 2011-present, Evan Czaplicki

Category: Compiler, Language

Cabal-version: >=1.9
Build-type: Simple

source-repository head
    type:     git
    location: git://github.com/elm/compiler.git


Flag dev {
  Description: Turn off optimization and make warnings errors
  Default: False
}


-- Executable elm
--     Main-Is:
--         Main.hs
library
    if flag(dev)
        ghc-options: -O0 -Wall -Werror
    else
        ghc-options: -O2
        -- add -eventlog for (elm make src/Main.elm +RTS -l; threadscope elm.eventlog)
        -- https://www.oreilly.com/library/view/parallel-and-concurrent/9781449335939/

    Hs-Source-Dirs:
        src

    other-extensions:
        TemplateHaskell



    exposed-modules:
        Elm.Compiler,
        Elm.Compiler.Module,
        Elm.Compiler.Type,
        Elm.Docs,
        Elm.Package,
        Elm.Utils
        Optimize,
        Optimize.Case,
        Optimize.DecisionTree,
        Optimize.Environment,
        Optimize.Inline,
        Parse.Binop,
        Parse.Declaration,
        Parse.Expression,
        Parse.Helpers,
        Parse.Literal,
        Parse.Module,
        Parse.Parse,
        Parse.Pattern,
        Parse.Type,
        Compile,
        Generate.JavaScript,
        Generate.JavaScript.Builder,
        AST.Declaration,
        AST.Effects,
        AST.Expression.Canonical,
        AST.Expression.General,
        AST.Expression.Optimized,
        AST.Expression.Source,
        AST.Expression.Valid,
        AST.Helpers,
        AST.Literal,
        AST.Module,
        AST.Module.Name,
        AST.Pattern,
        AST.Type,
        AST.Variable

    other-modules:
        Canonicalize,
        Canonicalize.Body,
        Canonicalize.Effects,
        Canonicalize.Environment,
        Canonicalize.Setup,
        Canonicalize.Sort,
        Canonicalize.Type,
        Canonicalize.Variable,
        Docs.AST,
        Docs.Centralize,
        Docs.Check,
        Elm.Compiler.Imports,
        Elm.Compiler.Type.Extract,
        Elm.Compiler.Version,
        -- Generate.JavaScript,
        -- Generate.JavaScript.Builder,
        Generate.JavaScript.BuiltIn,
        Generate.JavaScript.Expression,
        Generate.JavaScript.Foreign,
        Generate.JavaScript.Helpers,
        Generate.JavaScript.Literal,
        Generate.JavaScript.Variable,
        Nitpick.Pattern,
        Nitpick.PatternMatches,
        Nitpick.TopLevelTypes,
        Reporting.Annotation,
        Reporting.Bag,
        Reporting.Error,
        Reporting.Error.Canonicalize,
        Reporting.Error.Docs,
        Reporting.Error.Helpers,
        Reporting.Error.Pattern,
        Reporting.Error.Syntax,
        Reporting.Error.Type,
        Reporting.Region,
        Reporting.Render.Code,
        Reporting.Render.Type,
        Reporting.Report,
        Reporting.Result,
        Reporting.Warning,
        Type.Constrain.Effects,
        Type.Constrain.Expression,
        Type.Constrain.Literal,
        Type.Constrain.Pattern,
        Type.Environment,
        Type.Inference,
        Type.Solve,
        Type.State,
        Type.Type,
        Type.Unify,
        Validate
        -- , Paths_elm_compiler

    Build-depends:
        -- added by me
        aeson >= 0.11,
        aeson-pretty < 0.8,
        text,
        language-ecmascript,
        parsec,
        indents >= 0.3 && < 0.4,
        pretty,
        union-find,

        -- done added
        -- ansi-terminal >= 0.8 && < 0.9,
        ansi-terminal,
        ansi-wl-pprint >= 0.6.8 && < 0.7,
        base >=4.11 && <5,
        binary >= 0.8 && < 0.9,
        bytestring >= 0.9 && < 0.11,
        -- containers >= 0.5.8.2 && < 0.6,
        containers,
        directory >= 1.2.3.0 && < 2.0,
        edit-distance >= 0.2 && < 0.3,
        file-embed,
        filelock,
        filepath >= 1 && < 2.0,
        ghc-prim >= 0.5.2,
        haskeline,
        HTTP >= 4000.2.5 && < 4000.4,
        http-client >= 0.6 && < 0.7,
        http-client-tls >= 0.3 && < 0.4,
        http-types >= 0.12 && < 1.0,
        -- language-glsl >= 0.3,
        language-glsl,
        mtl >= 2.2.1 && < 3,
        -- network >= 2.4 && < 2.7,
        network,
        parsec,
        process,
        raw-strings-qq,
        scientific,
        SHA,
        snap-core,
        snap-server,
        template-haskell,
        time >= 1.9.1,
        -- time,
        unordered-containers,
        utf8-string,
        vector,
        zip-archive
